# OpenGlCode

./: .gitignore  CMakeLists.txt  README.md
1-GLFW-window/: CMakeLists.txt  glad.c  main.cpp
10-ShaderClass/: CMakeLists.txt  main.cpp
10-ShaderClass/GLconfig/: CMakeLists.txt  core.h  shader.cpp  shader.h
10-ShaderClass/assets/shader/: fragment.glsl  vertex.glsl
11-Uniform/: CMakeLists.txt  main.cpp
11-Uniform/assets/shader/: vertex.glsl
11-Uniform/assets/shader-move/: vertex.glsl
11-Uniform/assets/shader/default/: fragment.glsl  vertex.glsl
11-Uniform/assets/shader/rotate/: vertex.glsl
12-Texture/: CMakeLists.txt  main.cpp  repeat.cpp
12-Texture/assets/shader/: fragment.glsl  vertex.glsl
12-Texture/assets/shader/default/: fragment.glsl
12-Texture/assets/shader/translate/: vertex.glsl
13-TextureClass/: CMakeLists.txt  main.cpp  mix-texture.cpp
13-TextureClass/GLconfig/: CMakeLists.txt  Texture.cpp  Texture.h
13-TextureClass/assets/shader/mix-texture/: fragment.glsl
14-MipMap/: CMakeLists.txt  auto-MipMap.cpp  main.cpp
14-MipMap/GLconfig/: CMakeLists.txt  Texture.cpp  TextureMipMap.cpp  TextureMipMap.h
14-MipMap/assets/shader/default/: vertex.glsl
15-GLM-Transform/: CMakeLists.txt  GLMTest.cpp  main.cpp
15-GLM-Transform/assets/shader/default/: vertex.glsl
16-ViewMatrix/: CMakeLists.txt  main.cpp
16-ViewMatrix/assets/shader/default/: vertex.glsl
17-Projection/: CMakeLists.txt  Orthographic.cpp  Perspective.cpp
17-Projection/assets/shader/default/: vertex.glsl
18-Camera/: CMakeLists.txt  main.cpp
18-Camera/application/: Application.cpp  Application.h  CMakeLists.txt
18-Camera/application/camera/: camera.cpp  camera.h  cameraController.cpp  cameraController.h  gameCameraController.cpp  gameCameraController.h  orthographic.cpp  orthographic.h  orthographicCamera.cpp  perspective.cpp  perspective.h  perspectiveCamera.cpp  perspectiveCamera.h  trackballCameraController.cpp  trackballCameraController.h
19-DepthTest/: CMakeLists.txt  main.cpp
2-glad/: CMakeLists.txt  main.cpp
2-glad/exception/: CMakeLists.txt  error_check.h
20-Geometry/: CMakeLists.txt  main.cpp
20-Geometry/GLconfig/: CMakeLists.txt  geometry.cpp  geometry.h
3-Application/: CMakeLists.txt  main.cpp
3-Application/application/: Application.cpp  Application.h  CMakeLists.txt
3-Application/exception/: CMakeLists.txt  error_check.cpp
4-VBO/: CMakeLists.txt  main.cpp
5-VAO/: CMakeLists.txt  main.cpp
6-Shader/: CMakeLists.txt  main.cpp
7-DrawArray/: CMakeLists.txt  main.cpp
8-EBO/: CMakeLists.txt  main.cpp
9-DrawColor/: CMakeLists.txt  main.cpp
experiment/e1-paint/: CMakeLists.txt  README.txt  main.cpp  main_o.cpp
experiment/e1-paint/Application/: Application.cpp  Application.h
experiment/e1-paint/ShaderConfig/: CMakeLists.txt  shader.cpp  shader.h
experiment/e1-paint/application/: Application.cpp  Application.h  CMakeLists.txt
experiment/e1-paint/assets/shader/: fragment.glsl  vertex.glsl
experiment/e2-3D-exploration/: CMakeLists.txt  READAME  main.cpp  model.cpp
experiment/e2-3D-exploration/GLconfig/: CMakeLists.txt  geometry.cpp  geometry.h
experiment/e2-3D-exploration/application/: Application.cpp  Application.h  CMakeLists.txt  Global.h  util.h
experiment/e2-3D-exploration/application/camera/: cameraController.cpp  gameCameraController.cpp  gameCameraController.h  gameControlMoveStrategy.h  perspectiveCamera.cpp
experiment/e2-3D-exploration/assets/shader/default/: fragment.glsl
experiment/e3-model-light/: CMakeLists.txt  main.cpp
experiment/e3-model-light/GLconfig/: CMakeLists.txt  Texture.cpp  Texture.h  geometry.cpp  geometry.h  mesh.cpp  mesh.h  shader.cpp  shader.h
experiment/e3-model-light/application/: CMakeLists.txt  model.cpp  model.h
experiment/e3-model-light/application/camera/: camera.h  cameraController.h  gameCameraController.cpp  gameCameraController.h  gameControlMoveStrategy.cpp  gameControlMoveStrategy.h  orthographicCamera.h  trackballCameraController.cpp  trackballCameraController.h
experiment/e3-model-light/assets/shader/default/: fragment.glsl  vertex.glsl
experiment/e3-model-light/assets/shader/lightMap/: fragment.glsl  vertex.glsl
experiment/e3-model-light/assets/shader/lightSource/: fragment.glsl  vertex.glsl
experiment/e3-model-light/assets/shader/material/: fragment.glsl
experiment/model/: CMakeLists.txt  main.cpp
glad/: glad.c
include/glad/: glad.h
